# py_web_HW10

./: backup_index.html  pyproject.toml  read_me.txt
hw10/hw10/: settings.py
hw10/quotes/: models.py  urls.py  utils.py  views.py
hw10/quotes/static/quotes/: style.css
hw10/quotes/templates/quotes/: base.html  index.html
